--- a/dataset_cleanup.ipynb
+++ b/dataset_cleanup.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6559e7b5",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "Name: track_genre, Length: 114, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "5ebe34a0",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "621255af",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1f28ab71",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "Name: track_genre, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "74d3c7c4",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "17f6f460",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
        "Name: track_genre, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,17 +803,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "002f515f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1706427074.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\moata\\AppData\\Local\\Temp\\ipykernel_2656\\1706427074.py\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    df2.loc[(df['track_genre'] == 'afrobeat') | (df['track_genre'] == 'r-n-b') | df['track_genre'] == 'trip-hop')\u001b[0m\n\u001b[1;37m                                                                                                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\moata\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexing.py:1684: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[key] = infer_fill_value(value)\n",
+      "C:\\Users\\moata\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexing.py:1817: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(loc, value, pi)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Rock           22000\n",
+       "Dance          17000\n",
+       "Foreign        13000\n",
+       "Pop             9000\n",
+       "Latin           6000\n",
+       "Hip_Hop_R&B     5000\n",
+       "Reggae          5000\n",
+       "Classical       4000\n",
+       "Country         4000\n",
+       "Kids            3000\n",
+       "Cinema          2000\n",
+       "Jazz_Blues      2000\n",
+       "Indie           2000\n",
+       "Name: genre2, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -836,7 +869,7 @@
     "        | (df['track_genre'] == 'brazil') | (df['track_genre'] == 'german')| (df['track_genre'] == 'french')\n",
     "        | (df['track_genre'] == 'forro')\n",
     "        , 'genre2'] = 'Foreign'\n",
-    "df2.loc[(df['track_genre'] == 'afrobeat') | (df['track_genre'] == 'r-n-b') | df['track_genre'] == 'trip-hop') \n",
+    "df2.loc[(df['track_genre'] == 'afrobeat') | (df['track_genre'] == 'r-n-b') | (df['track_genre'] == 'trip-hop') \n",
     "        | (df['track_genre'] == 'soul') | (df['track_genre'] == 'hip-hop'), 'genre2'] = 'Hip_Hop_R&B'\n",
     "df2.loc[(df['track_genre'] == 'indie') | (df['track_genre'] == 'indie-pop'), 'genre2'] = 'Indie'\n",
     "df2.loc[(df['track_genre'] == 'kids') | (df['track_genre'] == 'disney')| (df['track_genre'] == 'children'), 'genre2'] = 'Kids'\n",
