--- a/Spotify_SupervisedMchineLearning.ipynb
+++ b/Spotify_SupervisedMchineLearning.ipynb
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c07bb1d7",
+   "id": "cd688d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4dec213e",
+   "id": "77b623c3",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,10 @@
    "id": "2f77b0c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export random forest model to joblib\n",
+    "joblib.dump(rf_model, './random_forest.joblib', compress=3)"
+   ]
   }
  ],
  "metadata": {
