--- a/Spotify_SupervisedMchineLearning.ipynb
+++ b/Spotify_SupervisedMchineLearning.ipynb
@@ -15,6 +15,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "import joblib\n",
     "import pandas as pd\n",
     "import tensorflow as tf"
    ]
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c07bb1d7",
+   "id": "85b63d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4dec213e",
+   "id": "a012576a",
    "metadata": {},
    "outputs": [
     {
@@ -1276,11 +1277,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2f77b0c0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./random_forest.joblib']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Export random forest model to joblib\n",
+    "joblib.dump(rf_model, './random_forest.joblib', compress=3)"
+   ]
   }
  ],
  "metadata": {
