--- a/Spotify_SupervisedMchineLearning.ipynb
+++ b/Spotify_SupervisedMchineLearning.ipynb
@@ -15,6 +15,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "import joblib\n",
     "import pandas as pd\n",
     "import tensorflow as tf"
    ]
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cd688d58",
+   "id": "db2329b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77b623c3",
+   "id": "2366c21e",
    "metadata": {},
    "outputs": [
     {
@@ -624,6 +625,39 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "6754703c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./scaler_model.joblib']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Scale tempo and loudness\n",
+    "\n",
+    "scaled_features = songs_df.copy()\n",
+    "col_names = ['loudness', 'tempo']\n",
+    "features = scaled_features[col_names]\n",
+    "scaler = StandardScaler().fit(features.values)\n",
+    "features = scaler.transform(features.values)\n",
+    "\n",
+    "scaled_features[col_names] = features\n",
+    "scaled_features.head()\n",
+    "\n",
+    "# Export scaler model to joblib\n",
+    "joblib.dump(scaler, './scaler_model.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d3002a30",
    "metadata": {},
    "outputs": [
@@ -643,24 +677,6 @@
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0, stratify=y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "38e81452",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a StandardScaler instances\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "# Fit the StandardScaler\n",
-    "X_scaler = scaler.fit(X_train)\n",
-    "\n",
-    "# Scale the data\n",
-    "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -986,7 +1002,7 @@
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "rf_model = rf_model.fit(X_train_scaled, y_train)"
+    "rf_model = rf_model.fit(X_train, y_train)"
    ]
   },
   {
@@ -1156,7 +1172,7 @@
    ],
    "source": [
     "# Make predictions\n",
-    "y_pred = rf_model.predict(X_test_scaled)\n",
+    "y_pred = rf_model.predict(X_test)\n",
     "results = pd.DataFrame({'Prediction': y_pred, 'Actual': y_test}).reset_index(drop=True)\n",
     "results.head(20)"
    ]
@@ -1171,7 +1187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.818936170212766\n"
+      "0.8181702127659575\n"
      ]
     }
    ],
@@ -1189,8 +1205,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[16723,   670],\n",
-       "       [ 3585,  2522]], dtype=int64)"
+       "array([[16724,   669],\n",
+       "       [ 3604,  2503]], dtype=int64)"
       ]
      },
      "execution_count": 20,
@@ -1239,29 +1255,29 @@
     {
      "data": {
       "text/plain": [
-       "[(0.10754279904685919, 'acousticness'),\n",
-       " (0.10670640016186649, 'loudness'),\n",
-       " (0.10612122221307488, 'danceability'),\n",
-       " (0.10572089994308845, 'valence'),\n",
-       " (0.10557302133040658, 'tempo'),\n",
-       " (0.10417316767390473, 'speechiness'),\n",
-       " (0.10185583256739723, 'energy'),\n",
-       " (0.09962208528661941, 'liveness'),\n",
-       " (0.08145569096772184, 'instrumentalness'),\n",
-       " (0.01424574012686676, 'genre_Pop'),\n",
-       " (0.008399904206616605, 'genre_Latin'),\n",
-       " (0.007515319600051535, 'explicit'),\n",
-       " (0.006782114226943478, 'genre_Rock'),\n",
-       " (0.0062751882649870055, 'genre_Foreign'),\n",
-       " (0.006265665965564667, 'genre_Dance'),\n",
-       " (0.005072689290867461, 'genre_Indie'),\n",
-       " (0.004702328045891307, 'genre_Cinema'),\n",
-       " (0.004277099581308425, 'genre_Classical'),\n",
-       " (0.004087341200057499, 'genre_Kids'),\n",
-       " (0.004035040509780053, 'genre_Hip_Hop_R&B'),\n",
-       " (0.003391632933816969, 'genre_Reggae'),\n",
-       " (0.003318267308069447, 'genre_Country'),\n",
-       " (0.002860549548240018, 'genre_Jazz_Blues')]"
+       "[(0.10764845585869111, 'acousticness'),\n",
+       " (0.1068401642478326, 'loudness'),\n",
+       " (0.10580899667576897, 'danceability'),\n",
+       " (0.10563880500973927, 'valence'),\n",
+       " (0.10556492175569908, 'tempo'),\n",
+       " (0.10442984020497302, 'speechiness'),\n",
+       " (0.10228676621560005, 'energy'),\n",
+       " (0.09967636320720807, 'liveness'),\n",
+       " (0.08083872463254509, 'instrumentalness'),\n",
+       " (0.014136628853099319, 'genre_Pop'),\n",
+       " (0.008275377660525194, 'genre_Latin'),\n",
+       " (0.0074984392733323845, 'explicit'),\n",
+       " (0.006868088864383559, 'genre_Rock'),\n",
+       " (0.006441529148060546, 'genre_Dance'),\n",
+       " (0.0062558789710192575, 'genre_Foreign'),\n",
+       " (0.005040037735601135, 'genre_Indie'),\n",
+       " (0.004734999054576648, 'genre_Cinema'),\n",
+       " (0.004285399325189628, 'genre_Classical'),\n",
+       " (0.004174923282366262, 'genre_Hip_Hop_R&B'),\n",
+       " (0.004098881459420741, 'genre_Kids'),\n",
+       " (0.0034271307018306106, 'genre_Reggae'),\n",
+       " (0.003317168518039612, 'genre_Country'),\n",
+       " (0.0027124793444978776, 'genre_Jazz_Blues')]"
       ]
      },
      "execution_count": 22,
@@ -1276,10 +1292,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2f77b0c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./random_forest.joblib']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Export random forest model to joblib\n",
     "joblib.dump(rf_model, './random_forest.joblib', compress=3)"
