Upload updated files

--- a/Spotify_SupervisedMchineLearning.ipynb
+++ b/Spotify_SupervisedMchineLearning.ipynb
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0e656087",
+   "id": "a8973492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "04a35617",
+   "id": "3baaca2f",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "be787331",
+   "id": "a196b9fd",
    "metadata": {},
    "outputs": [
     {
@@ -672,8 +672,8 @@
    ],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "y = songs_df['hit']\n",
-    "X = songs_df.drop(['hit', 'track_id'],1)\n",
+    "y = scaled_features['hit']\n",
+    "X = scaled_features.drop(['hit', 'track_id'],1)\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0, stratify=y)"
@@ -704,20 +704,6 @@
    "id": "35403c78",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\admin\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:818: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG,\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -916,7 +902,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7410638297872341\n"
+      "0.7412765957446809\n"
      ]
     }
    ],
@@ -934,8 +920,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[17170,   223],\n",
-       "       [ 5862,   245]], dtype=int64)"
+       "array([[17151,   242],\n",
+       "       [ 5838,   269]], dtype=int64)"
       ]
      },
      "execution_count": 14,
@@ -961,10 +947,10 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "         0.0       0.75      0.99      0.85     17393\n",
-      "         1.0       0.52      0.04      0.07      6107\n",
+      "         1.0       0.53      0.04      0.08      6107\n",
       "\n",
       "    accuracy                           0.74     23500\n",
-      "   macro avg       0.63      0.51      0.46     23500\n",
+      "   macro avg       0.64      0.52      0.47     23500\n",
       "weighted avg       0.69      0.74      0.65     23500\n",
       "\n"
      ]
